Class251. Resaltar la página actual

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -38,6 +38,7 @@
     transition-duration: 300ms;
     padding: .5rem;
 }
-.navegacion a:hover{
+.navegacion a:hover, 
+.active{
     background-color: var(--primary);
 }
