--- a/styles/guitarras.module.css
+++ b/styles/guitarras.module.css
@@ -44,3 +44,35 @@
 .enlace:hover {
     background-color: var(--primary);
 }
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    margin-top: 4rem;
+    gap: 1rem;
+}
+.formulario label{
+    font-size: 2.2rem;
+}
+.formulario select{
+    border:1px solit var(--black);
+    padding: 1rem;
+    text-align: center;
+    border-radius: 1rem;
+}
+.formulario input[type="submit"]{
+    display: block;
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 100%;
+    border: none;
+    padding: 1.4rem;
+    background-color:var(--black);
+    color: var(--white);
+    transition-property: background-color;
+    transition-duration: 300ms;
+}
+.formulario input[type="submit"]:hover{
+    background-color: var(--primary);
+    cursor: pointer;
+}
