--- a/styles/guitarras.module.css
+++ b/styles/guitarras.module.css
@@ -55,7 +55,7 @@
     font-size: 2.2rem;
 }
 .formulario select{
-    border:1px solit var(--black);
+    border:1px solid var(--black);
     padding: 1rem;
     text-align: center;
     border-radius: 1rem;
