--- a/styles/carrito.module.css
+++ b/styles/carrito.module.css
@@ -33,13 +33,22 @@
     font-weight: 900;
 }
 
+.select{
+    all:unset;
+    border:1px solid var(--black);
+    padding: 1rem;
+    text-align: center;
+    border-radius: 1rem;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
 .nombre{
     font-size: 4.2rem;
     font-weight: 700;
 }
 
 .precio{
-    margin-top: 2rem;
     font-weight: 700;
     color: var(--primary);
 }
